# argdeclare

./: CHANGELOG.md  Makefile  README.md  argdeclare.py  demo.py  pyproject.toml  test_argdeclare.py
archive/: argdeclare.py
demos/: custom_prefix.py
examples/: basic.py  hierarchical.py
